Added favicon and preivew image

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <meta property='og:image' content="%PUBLIC_URL%/preview_img.jpg" />
+    <title>Streamlined</title>
   </head>
   <body>
     <div id="root"></div>
