--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property='og:title' content="Streamlined"/>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Search TV Shows/Movies by title to see where theyre streamed."
     />
     <meta property='og:image' content="%PUBLIC_URL%/preview_img.jpg" />
+    <meta property='og:url' content="https://streamlinedapp.herokuapp.com/#/" />
     <title>Streamlined</title>
   </head>
   <body>
